# cmdbudget

./: .gitignore  DIRECTIVE.AI  FIXED.md  LICENSE  PROMPTS.AI  README.MD  ROADMAP.md  cli.py  main.py  pyproject.toml  transaction.py  transaction_operations.py  transaction_processor.py  transaction_reporter.py  transactions.csv  transactions_editor.py  transactions_manager.py  update_dates.py
.cursor/rules/: add-rule.mdc  assistant-identity.mdc  code-commenting.mdc  coding-conventions.mdc  documentation-maintenance.mdc  file-tagging.mdc  implement-story.mdc  knowledge-management.mdc  product-manager-lead.mdc  role-selection.mdc  senior-software-developer.mdc  technical-breakdown-process.mdc  technical-investigative-developer.mdc  technical-refinement.mdc  technical-software-architect.mdc
.github/workflows/: python-tests.yml
ai_files/: CHANGELOG.AI  DIRECTIVE.AI  KB.AI  PROMPTS.AI  RULES.AI
cmdbudget/: cli.py  config.py  currency_utils.py  display.py  main.py  transaction.py  transaction_operations.py  transaction_processor.py  transaction_reporter.py  transactions_editor.py  transactions_manager.py  user_input.py  utils.py
docs/: currency_configuration.md
documentation/: ARCHITECTURE.md
product/: FIXED.md  PRD.md  ROADMAP.md
product/features/advanced_search/: overview.md
product/features/advanced_search/user_stories/: amount_search.md  category_search.md  combined_search.md  date_range_search.md  description_search.md  search_results_display.md  tag_search.md
product/features/multi_currency/: overview.md
(+4 files in other folders)
